# nicegui_chat

./: .coverage 2  .coveragerc  .env.example  .env.sliplane  .env.sliplane.local  .gitignore  .kilocode  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  PERFORMANCE_VALIDATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SLIPLANE_DEPLOYMENT.md  TESTING.md  TESTING_PLAN.md  config.py  custom_results.json  demo.py  deploy_fix.sh  deploy_to_nas.sh  docker-compose.sliplane.yml  main.py  manifest.json  pyproject.toml  pytest.ini  requirements.txt  run.py  run.sh  run_performance_validation.py  run_tests.py  (+18 more)
.github/workflows/: ci.yml
branding/: BRAND_GUIDELINES.md  COMPLETE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  PACKAGE_SUMMARY.md  README.md  TRADEMARK_RULES.md  color-palette.html
config/: app.json  app_config.json  nas.json  nas_config.json  scene.json  system.md  theme.json
css/: main.css
docs/: API.md  CODING_STANDARDS_PROCEDURES.md
prompts/: system.md
public/: manifest.json  service_worker.js
scripts/: deploy_to_sliplane.sh
src/: __version__.py  ai_service.py  config.py  heysol_types.pyi  models.py
src/models/: __init__.py  chat.py  memory.py
src/services/: __init__.py  agent_service.py  ai_service.py  auth_service.py  chat_service.py  health_service.py  memory_service.py
src/ui/: __init__.py  chat_ui.py  main_ui.py
src/utils/: __init__.py  docker_profiler.py  exceptions.py  logging_config.py  memory_profiler.py  performance_comparison.py  rate_limiting.py  security_middleware.py  text_processing.py  timeout_reproducer.py
styles/: healthcare.css
tests/: __init__.py  conftest.py  test_async_integration.py  test_bugs.py  test_docker_performance.py  test_e2e.py  test_integration.py  test_load_framework.py  test_memory_service.py  test_models.py  test_performance_benchmarks.py  test_regression_suite.py  test_services.py  test_streaming_performance.py  test_timeout_reproducer.py  test_trademark_validation.py  test_ui.py  test_utils.py
tests/integration/: __init__.py  test_chat_integration.py
tests/unit/: __init__.py  test_config.py  test_exceptions.py  test_models_chat.py  test_models_memory.py  test_services_agent.py  test_services_auth.py  test_services_chat.py  test_services_memory.py  test_ui_chat_ui.py
validation_results/: validation_results_1760150329.json  validation_results_1760150484.json  validation_results_1760150581.json  validation_results_1760150581.txt  validation_results_1760150891.json  validation_results_1760153203.json
