[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mammochat"
version = "0.2.0"
description = "MammoChat - Compassionate AI support for breast cancer patients"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Developer" },
]
license = {text = "MIT"}
keywords = ["nicegui", "chatbot", "memory", "heysol", "deepseek", "ai"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "nicegui>=1.4.0",
  "pydantic>=2.7.0",
  "pydantic-ai>=0.8.0,<1.0",
  "python-dotenv>=1.0.0",
  "heysol-api-client>=1.2.1",
  "structlog>=24.1.0",
  "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "black>=23.0",
  "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
